--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <script>
         // *** ATENÇÃO: Use a mesma chave de API para ambas as chamadas (gerar e verificar) ***
         // É ALTAMENTE RECOMENDADO que você mova esta chave para um BACKEND SEGURO
-        const PUSHINPAY_API_KEY = "34248|z2mksSJM8nePizpGykXoFXMyfG414deJkg3nRA8g8cbd86a2"; 
+        const PUSHINPAY_API_KEY = "d1208e08aea3b871269d45fe6c70865dbc3f868945f8b80c752bd2db5614f05e"; 
 
         const enviarMensagem = (mensagem) => {
             const mensagemDiv = document.getElementById('mensagem');
@@ -373,3 +373,4 @@
 
 </body>
 </html>
+
